# ethical

./: .gitignore  Cargo.toml  LICENSE.md  README.md  doc.md  snapcraft.yaml
.github/workflows/: ci.yml
src/: .lib.rs.swp  lib.rs  main.rs
