[package]
name = "calendar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"

[package.metadata.deb]
maintainer = "Misgana Bayetta <misgana.bayetta@gmail.com>"
copyright = "2023, 2023 <misgana.bayetta@gmail.com>"
